JUnit 5 test adjustment